--- a/clipperz-chrome-extension/css/clipperz/clipperz-chrome-ext.css
+++ b/clipperz-chrome-extension/css/clipperz/clipperz-chrome-ext.css
@@ -58,6 +58,16 @@ div#optionsBox h1 {
     color: #1f2148;
 }
 
+div#optionsBox div#confirmation {
+    color: #dd5500;
+    font-weight: bold;
+    visibility: hidden;
+}
+
+.saved div#optionsBox div#confirmation {
+    visibility: visible;
+}
+
 div#optionsBox form.optionsForm label {
     color: #1f2148;
     font-size: 10pt;
@@ -147,7 +157,7 @@ div.pageHeader div#buttons a#logout {
 div#logoFrame {
     background-color: #1f2148;
     padding: 5px 10px;
-    min-height: 25px;
+    min-height: 20px;
 }
 
 div#logoFrame div#logo {
@@ -393,6 +403,15 @@ div.loadingBar div.loadingBarProgress {
     background-color: rgba(248,79,0,0.6);
     -webkit-border-radius: 9px;
     border-radius: 9px;
+}
+
+/* @end */
+
+/* @group Popup page body */
+
+#mainDiv .cardTree tree {
+    height: 500px;
+    overflow: auto;
 }
 
 /* @end */
