Enhance tree of cards
Create tree of cards with custom node separator. Separator
customized on Options page and used to split labels of cards
as a path in a tree. Example: label "a/b/c" with separator "/"
will produce subtree with nodes a, b, c, where b is a child of a and
c is a child of b.

--- a/clipperz-chrome-extension/css/cr/tree.css
+++ b/clipperz-chrome-extension/css/cr/tree.css
@@ -103,6 +103,7 @@ tree:focus .tree-row[selected] {
   background-image: url("/images/folder_closed.png");
   background-position: 0 50%;
   background-repeat: no-repeat;
+  background-size: 16px 16px;
   white-space: pre;
 }
 
